--- a/config/config.json
+++ b/config/config.json
@@ -8,13 +8,16 @@
   },
   "test": {
     "username": "root",
-    "password": "poke2511",
-    "database": "burgers_db",
+    "password": null,
+    "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "username": "root",
+    "password": "poke2511",
+    "database": "burgers_db",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
